--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
